--- a/css/about.css
+++ b/css/about.css
@@ -79,7 +79,7 @@
     align-items: center;
     justify-content: flex-end;
     left: 23%;
-    bottom: -230px;
+    bottom: -280px;
     transform: translate(-21%,-50%);
 }
 
@@ -237,7 +237,7 @@
     border-bottom: 1px solid #E5E5E5;
     background: none;
     color: #A7A7A7;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 17px;
     border-radius: 0;
     opacity: .8;
@@ -257,6 +257,7 @@
 }
 
 .contact_form textarea {
+    font-size: 12px;
     padding: 5px;
     color: #A7A7A7;
     border-color: #E5E5E5;
@@ -271,6 +272,7 @@
 }
 
 .contact_form label {
+    font-size: 12px;
     color: #A7A7A7;
 }
 
@@ -283,7 +285,7 @@
     margin-left: auto;
     padding: 10px 0;
     width: 111px;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 140.69%;
     margin-top: 43px;
 
@@ -422,7 +424,7 @@
 
 .armenian_office .contact_block .phone_block .phone_number {
     font-weight: 500;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 22px;
     color: #FFFFFF;
     margin-top: 20px;
@@ -435,7 +437,7 @@
 .armenian_office .contact_block .mail_block .mail_name {
     margin-top: 20px;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 22px;
     color: #FFFFFF;
 }
@@ -448,12 +450,22 @@
 .about_us_main_content{
     overflow: hidden;
 }
-.about_us_main_content .header_block img{
-    width: 100%;
+
+.about_us_main_content .header_block{
+
+}
+.about_us_main_content .header_block .carousel-item{
+    height: 100vh;
+}
+.about_us_main_content .header_block .carousel-indicators li{
+    background-color: #343434;
+}
+.about_us_main_content .header_block .carousel-indicators li.active{
+    background-color: #C4C4C4;
 }
 .about_us_main_content .team_content{
     max-width: 640px;
-    margin: 30px auto 0;
+   margin-top: 60px;
     font-size: 15px;
     line-height: 30px;
 }
@@ -470,7 +482,6 @@
 }
 .about_us_main_content .block_content .articel_img{
     width: 90%;
-    margin: auto;
     display: block;
 }
 
@@ -485,13 +496,13 @@
 }
 
 .about_us_main_content .article_block img {
-    width: 100%;
+    width: 90%;
     height: 100%;
 }
 
 .about_us_main_content .article_block .article_content {
-    margin-top: 35px;
-    max-width: 600px;
+    margin-top: 40px;
+    max-width: 640px;
 }
 
 .about_us_main_content .article_block .article_title {
@@ -585,7 +596,7 @@
     text-transform: uppercase;
 }
 .about_us_main_content .aside{
-    padding: 90px 45px 190px;
+    padding: 45px 80px 170px;
 }
 .about_us_main_content .aside .aside_content{
     max-width: 1800px;
@@ -599,7 +610,7 @@
 }
 .about_us_main_content .aside .aside_img{
     position: relative;
-    width: 100%;
+    width: 135%;
     right: 30%;
     top: 15%;
     height: 100%;
@@ -639,10 +650,12 @@
     .about_us_main_content .about_block{
         padding: 45px;
     }
-
+    .about_us_main_content .header_block .carousel-item{
+        height: initial;
+    }
     .about_us_main_content .team_content{
         max-width: 640px;
-        margin:auto;
+        margin:20px auto 0;
     }
     .about_us_main_content .aside{
         padding: 90px 45px;
@@ -680,7 +693,7 @@
         padding: 40px 18px;
     }
     .about_us_main_content .block_content .articel_img{
-        width: 100%;
+        width: 90%;
     }
     .about_us_main_content .article_block{
         padding: 50px 18px;
