--- a/css/how_we_work.css
+++ b/css/how_we_work.css
@@ -1,6 +1,9 @@
 .how_we_work_content .header_board img {
     width: 100%;
 }
+.how_we_work_content .header_board .carousel-item{
+    height: 100vh;
+}
 .how_we_work_content .header_board .carousel-indicators li{
     background-color: #343434;
 }
@@ -82,7 +85,6 @@
 }
 
 .article_block .article_content {
-    margin: auto;
     max-width: 600px;
 }
 
@@ -160,7 +162,7 @@
 }
 
 .custom_software_block {
-    padding: 45px 90px;
+    padding: 80px 45px;
     background: #F5F5F5;
 }
 
@@ -176,6 +178,7 @@
 
 .custom_software_content .text_block {
     text-align: left;
+    margin: 40px 0 0;
 }
 
 .custom_software_content .software_title {
@@ -234,6 +237,9 @@
 @media (max-width: 992px) {
     div.article_block{
         padding: 80px 20px;
+    }
+    .how_we_work_content .header_board .carousel-item{
+        height: initial;
     }
     .article_block .articel_main .article_title{
         font-size: 17px;
