--- a/css/about.css
+++ b/css/about.css
@@ -451,12 +451,15 @@
     overflow: hidden;
 }
 
-.about_us_main_content .header_block{
-
-}
 .about_us_main_content .header_block .carousel-item{
     height: 100vh;
 }
+.about_us_main_content .header_block img{
+    align-items: inherit;
+    object-fit: cover;
+    height: 100%;
+}
+
 .about_us_main_content .header_block .carousel-indicators li{
     background-color: #343434;
 }
@@ -465,9 +468,10 @@
 }
 .about_us_main_content .team_content{
     max-width: 640px;
-   margin-top: 60px;
+    margin-top: 45px;
     font-size: 15px;
     line-height: 30px;
+    margin-left: auto;
 }
 .about_us_main_content .team_content .company{
     color: #23504B;
@@ -477,7 +481,7 @@
     padding: 45px 80px;
 }
 .about_us_main_content .block_content{
-    max-width: 1800px;
+    max-width: 1300px;
     margin: auto;
 }
 .about_us_main_content .block_content .articel_img{
@@ -486,7 +490,7 @@
 }
 
 .about_us_main_content .article_block .articel_main {
-    max-width: 1800px;
+    max-width: 1300px;
     margin: auto;
 }
 
@@ -503,6 +507,7 @@
 .about_us_main_content .article_block .article_content {
     margin-top: 40px;
     max-width: 640px;
+    margin-left: auto;
 }
 
 .about_us_main_content .article_block .article_title {
@@ -518,7 +523,7 @@
     color: #fff;
 }
 .about_us_main_content .blog_board{
-    padding: 45px 80px;
+    padding: 45px 139px;
 }
 .blog_board .card-img-top{
     border-radius: 0;
@@ -580,7 +585,7 @@
     margin-top: 15px;
 }
 .about_us_main_content .article .article_main_content{
-    max-width: 1800px;
+    max-width: 1300px;
     margin: auto;
 }
 .about_us_main_content .article .article_main_content .main_text{
@@ -590,7 +595,7 @@
     color: #23504B;
 }
 .about_us_main_content .article .article_main_content .main_text span{
-    font-size: 38px;
+    font-size: 32px;
     margin-right: 20px;
     display: inline-block;
     text-transform: uppercase;
@@ -599,7 +604,7 @@
     padding: 45px 80px 170px;
 }
 .about_us_main_content .aside .aside_content{
-    max-width: 1800px;
+    max-width: 1300px;
     margin: auto;
 }
 .about_us_main_content .aside .aside_board{
