creat new page careers

--- a/css/about.css
+++ b/css/about.css
@@ -166,7 +166,7 @@
 /*contact us page css*/
 
 .bg-baner {
-    background: url('../img/2.jpg') center center no-repeat;
+    background: url('../img/about-header.jpg') center center no-repeat;
     background-size: cover;
     height: 604px;
     position: relative;
